finish home.html, home.css

--- a/home.html
+++ b/home.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- title -->
     <title>Marko Petrovic</title>
+    <!-- favicon -->
+    <link rel="icon" href="assets/favicon.ico">
     <!-- styles -->
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="home.css" />
+    <!-- Animation library -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <main>
@@ -20,6 +24,7 @@
         <div class="header-links">
           <a href="home.html" class="header-link">Home</a>
           <a href="#" class="header-link">Projects</a>
+          <a href="assets/CV.pdf" class="resume-btn" download>Resume</a>
         </div>
       </header>
       <!-- end of header section -->
@@ -39,9 +44,128 @@
           </div>
         </div>
       </div>
+      <!-- end of home welcome section -->
+
+      <!-- biography section -->
+      <div data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000" data-aos-once="true">
+        <section class="biography-section">
+          <h4 class="biography-small-title">Biography</h4>
+          <h2 class="biography-large-title">Who am I?</h2>
+          <div class="biography-about-me">   
+            <h5 class="biography-about-me-small-title">About me</h5>
+            <h5 class="biography-about-me-large-title">Marko Petrović</h5>
+            <p class="biography-about-me-text">I have been working in technologies like HTML, CSS and JavaScript  for over two years. As for my path, I was self-taught. I was helped a lot by various tutorials on  youtube, as well various sites like <strong>freeCodeCamp, W3Schools, Scrimba.com, MDN Web Docs, Udemy</strong>, and more. Projects that I did on my own and in which I invested a lot of time and effort  helped my development a lot. I don't have much work experience when it comes to working in a team, I   am currently looking for a job of this type. And I hope that in the near future I will be given the   opportunity to show my full potential in a working environment.  I have a great desire to further   develop my professional skills and knowledge, learn new things and improve. As a 22-year-old  developer, I understand the importance of staying up-to-date with the latest technologies and trends   in order to deliver exceptional user experiences.</p>  
+            <div class="biography-btns">
+              <a href="https://www.linkedin.com/in/marko-petrovi%C4%87-937b8323a/" target="_blank" class="bio-btn">
+                <p class="contact-card-name">Linkedin</p>
+                <p class="contact-card-value">marko-petrović</p>
+              </a>
+              <a href="https://github.com/Marex-cpu" target="_blank" class="bio-btn">
+                <p class="contact-card-name">GitHub</p>
+                <p class="contact-card-value">Marex-cpu</p>
+              </a>
+              <a href="https://www.instagram.com/marex_learn_dev/" target="_blank" class="bio-btn">
+                <p class="contact-card-name">Instagram</p>
+                <p class="contact-card-value">@marex_learn_dev</p>
+              </a>
+              <a href="https://www.upwork.com/freelancers/~018b4a0daf4ef37342?viewMode=1" target="_blank" class="bio-btn">
+                <p class="contact-card-name">Upwork</p>
+                <p class="contact-card-value">Marko P.</p>
+              </a>
+            </div>
+            <a class="home-contactMe" href="mailto:markoo3871@gmail.com">Contact me</a>
+          </div>   
+        </section>
+      </div>
+      <!-- end of biography section -->
+
+      <!-- skills section -->
+      <div data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000" data-aos-once="true">
+        <section class="skills-section">
+          <h4 class="skills-small-title">Skills</h4>
+          <h2 class="skills-large-title">Skills do I have </h2>
+          <div class="skills-container">
+            <div class="skill">
+              <span class="skill-name">HTML</span>
+              <div class="skill-percent"></div>
+            </div>
+            <div class="skill">
+              <span class="skill-name">CSS/SCSS/Sass</span>
+              <div class="skill-percent two"></div>
+            </div>
+            <div class="skill">
+              <span class="skill-name">Bootstrap 5</span>
+              <div class="skill-percent three"></div>
+            </div>
+            <div class="skill">
+              <span class="skill-name">Tailwind</span>
+              <div class="skill-percent three"></div>
+            </div>
+            <div class="skill">
+              <span class="skill-name">JavaScript</span>
+              <div class="skill-percent four"></div>
+            </div>
+            <div class="skill">
+              <span class="skill-name">jQuery</span>
+              <div class="skill-percent four"></div>
+            </div>
+            <div class="skill">
+              <span class="skill-name">React</span>
+              <div class="skill-percent five"></div>
+            </div>
+            <div class="skill">
+              <span class="skill-name">TypeScript</span>
+              <div class="skill-percent five"></div>
+            </div>
+          </div>
+        </section>
+      </div>
+      <!-- end of skills section -->
+
+      <!-- services section -->
+      <div data-aos="fade-up" data-aos-delay="40" data-aos-duration="1000" data-aos-once="true">
+        <section class="services-section">
+          <h4 class="skills-small-title">Services</h4>
+          <h2 class="skills-large-title">What I do?</h2>
+          <div class="services-container">
+            <div class="services-item">
+              <img src="assets/coding-website.svg" />
+              <h4 class="services-title">Modern Website Design</h4>
+              <p class="services-info">I create modern and attractive websites that are tailored to your needs. Helping to increase your oniline visibility.</p>
+            </div>
+            <div class="services-item">
+              <img src="assets/responsive-in-three-screens-interface.svg" />
+              <h4 class="services-title">Responsive design</h4>
+              <p class="services-info">I create websites that are optimized for all devices, including mobile phones, tablets, and computers.</p>
+            </div>
+            <div class="services-item">
+              <img src="assets/settings-monitor.svg" />
+              <h4 class="services-title">Performance optimization</h4>
+              <p class="services-info">I imporve the performance of your website to reduce loading times and improve user interaction.</p>
+            </div>
+          </div>
+        </section>
+      </div>
+      <!-- end of services section -->
+
+      <!-- footer section -->
+      <footer>
+        <div class="social-media-links-container">
+          <a href="https://www.linkedin.com/in/marko-petrovi%C4%87-937b8323a/" target="_blank"><img src="assets/linkedin-svgrepo-com (2).svg" alt="linkedin icon"></a>
+          <a href="https://github.com/Marex-cpu" target="_blank"><img src="assets/github-svgrepo-com.svg" alt="github icon"></a>
+          <a href="https://www.instagram.com/marex_learn_dev/" target="_blank"><img src="/assets/instagram-svgrepo-com (1).svg" alt="instagram icon"></a>
+          <a href="https://www.upwork.com/freelancers/~018b4a0daf4ef37342?viewMode=1" target="_blank"><img src="/assets/upwork-svgrepo-com.svg" alt="upwork icon"></a>    
+        </div>
+      </footer>
+      <!-- end of footer section -->
     </main>
 
     <!-- JS -->
-    <script src="typeWriter.js"></script>
+    <script src="typeWriter.js"></script> 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
+  
 </html>
