portfolio logic and setup

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- title -->
-    <title>Marko Petrovic</title>
+    <title>Marko Petrovic | Home</title>
     <!-- favicon -->
     <link rel="icon" href="assets/favicon.ico">
     <!-- styles -->
@@ -23,7 +23,7 @@
         </div>
         <div class="header-links">
           <a href="home.html" class="header-link">Home</a>
-          <a href="#" class="header-link">Projects</a>
+          <a href="portfolio.html" class="header-link">Portfolio</a>
           <a href="assets/CV.pdf" class="resume-btn" download>Resume</a>
         </div>
       </header>
