--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,19 @@
     <header class="header">
       <a href="home.html" class="header-name">Marko Petrović</a>
       <a href="home.html" class="header-link"> Home</a>
+      <div class="links-container">
+        <a
+          href="https://www.linkedin.com/in/marko-petrovi%C4%87-937b8323a/"
+          style="width: 18px"
+          ><img src="assets/linkedin-svgrepo-com (2).svg" alt="linkedin icon"
+        /></a>
+        <a href="https://github.com/Marex-cpu"
+          ><img src="assets/github-svgrepo-com.svg" alt="github icon"
+        /></a>
+        <a href="https://www.instagram.com/marex_learn_dev/"
+          ><img src="assets/instagram-svgrepo-com (1).svg" alt="instagram icon"
+        /></a>
+      </div>
     </header>
     <!-- end of header section -->
 
