--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
     <main id="projects-container">
       <!-- individual project -->
       <div
-        data-aos="fade-right"
+        data-aos="zoom-in-up"
         data-aos-delay="50"
         data-aos-duration="1000"
         data-aos-once="true"
@@ -119,13 +119,6 @@
                 alt="project image boxbox.rs site"
                 class="image"
               />
-              <a
-                href="https://www.boxbox.rs/"
-                target="_blank"
-                class="link-icon"
-              >
-                <img src="assets/link-svgrepo-com (1).svg" alt="link icon" />
-              </a>
             </figure>
           </div>
         </div>
@@ -133,7 +126,7 @@
 
       <!-- individual project -->
       <div
-        data-aos="fade-left"
+        data-aos="zoom-in-up"
         data-aos-delay="50"
         data-aos-duration="1000"
         data-aos-once="true"
@@ -219,13 +212,6 @@
                 alt="project image KIRI shop site"
                 class="image"
               />
-              <a
-                href="https://kiridemosite.netlify.app/index.html"
-                target="_blank"
-                class="link-icon"
-              >
-                <img src="assets/link-svgrepo-com (1).svg" alt="link icon" />
-              </a>
             </figure>
           </div>
         </div>
@@ -233,7 +219,7 @@
 
       <!-- individual project -->
       <div
-        data-aos="fade-right"
+        data-aos="zoom-in-up"
         data-aos-delay="50"
         data-aos-duration="1000"
         data-aos-once="true"
@@ -320,13 +306,6 @@
                 alt="project image Bank Moder UL/UX site"
                 class="image"
               />
-              <a
-                href="https://mareself-modern-bank.netlify.app/"
-                target="_blank"
-                class="link-icon"
-              >
-                <img src="assets/link-svgrepo-com (1).svg" alt="link icon" />
-              </a>
             </figure>
           </div>
         </div>
@@ -334,7 +313,7 @@
 
       <!-- individual project -->
       <div
-        data-aos="fade-left"
+        data-aos="zoom-in-up"
         data-aos-delay="50"
         data-aos-duration="1000"
         data-aos-once="true"
@@ -413,13 +392,6 @@
                 alt="project image JavaScript Vanila site"
                 class="image"
               />
-              <a
-                href="https://mareself-javascript-vanila.netlify.app/"
-                target="_blank"
-                class="link-icon"
-              >
-                <img src="assets/link-svgrepo-com (1).svg" alt="link icon" />
-              </a>
             </figure>
           </div>
         </div>
