add modal on checkout page

--- a/home.html
+++ b/home.html
@@ -87,35 +87,67 @@
           <div class="skills-container">
             <div class="skill">
               <span class="skill-name">HTML</span>
-              <div class="skill-percent"></div>
+              <div class="skill-percent">
+                <span class="skill-per">
+                  <span class="tooltip">90%</span>
+                </span>
+              </div>
             </div>
             <div class="skill">
               <span class="skill-name">CSS/SCSS/Sass</span>
-              <div class="skill-percent two"></div>
+               <div class="skill-percent">
+                <span class="skill-per">
+                  <span class="tooltip">90%</span>
+                </span>
+              </div>
             </div>
             <div class="skill">
               <span class="skill-name">Bootstrap 5</span>
-              <div class="skill-percent three"></div>
+               <div class="skill-percent">
+                <span class="skill-per bootstrap">
+                  <span class="tooltip">70%</span>
+                </span>
+              </div>
             </div>
             <div class="skill">
               <span class="skill-name">Tailwind</span>
-              <div class="skill-percent three"></div>
+             <div class="skill-percent">
+                <span class="skill-per tailwind">
+                  <span class="tooltip">60%</span>
+                </span>
+              </div>
             </div>
             <div class="skill">
               <span class="skill-name">JavaScript</span>
-              <div class="skill-percent four"></div>
+               <div class="skill-percent">
+                <span class="skill-per javascript">
+                  <span class="tooltip">65%</span>
+                </span>
+              </div>
             </div>
             <div class="skill">
               <span class="skill-name">jQuery</span>
-              <div class="skill-percent four"></div>
+               <div class="skill-percent">
+                <span class="skill-per jQuery">
+                  <span class="tooltip">55%</span>
+                </span>
+              </div>
             </div>
             <div class="skill">
               <span class="skill-name">React</span>
-              <div class="skill-percent five"></div>
+              <div class="skill-percent">
+                <span class="skill-per react-type">
+                  <span class="tooltip">40%</span>
+                </span>
+              </div>
             </div>
             <div class="skill">
               <span class="skill-name">TypeScript</span>
-              <div class="skill-percent five"></div>
+               <div class="skill-percent">
+                <span class="skill-per react-type">
+                  <span class="tooltip">40%</span>
+                </span>
+              </div>
             </div>
           </div>
         </section>
@@ -141,7 +173,7 @@
             <div class="services-item">
               <img src="assets/settings-monitor.svg" />
               <h4 class="services-title">Performance optimization</h4>
-              <p class="services-info">I imporve the performance of your website to reduce loading times and improve user interaction.</p>
+              <p class="services-info">I improve the performance of your website to reduce loading times and improve user interaction.</p>
             </div>
           </div>
         </section>
