--- a/portfolio.html
+++ b/portfolio.html
@@ -113,13 +113,17 @@
                 </div>
               </div>
             </section>
-            <figure class="project-image">
+            <a
+              href="https://www.boxbox.rs/"
+              target="_blank"
+              class="project-image"
+            >
               <img
                 src="assets/project-image-one.webp"
                 alt="project image boxbox.rs site"
                 class="image"
               />
-            </figure>
+            </a>
           </div>
         </div>
       </div>
@@ -206,13 +210,17 @@
                 </div>
               </div>
             </section>
-            <figure class="project-image">
+            <a
+              href="https://kiridemosite.netlify.app/"
+              target="_blank"
+              class="project-image"
+            >
               <img
                 src="assets/project-image-two.webp"
                 alt="project image KIRI shop site"
                 class="image"
               />
-            </figure>
+            </a>
           </div>
         </div>
       </div>
@@ -300,13 +308,17 @@
                 </div>
               </div>
             </section>
-            <figure class="project-image">
+            <a
+              href="https://mareself-modern-bank.netlify.app/"
+              target="_blank"
+              class="project-image"
+            >
               <img
                 src="assets/project-image-three.webp"
                 alt="project image Bank Moder UL/UX site"
                 class="image"
               />
-            </figure>
+            </a>
           </div>
         </div>
       </div>
@@ -386,13 +398,17 @@
                 </div>
               </div>
             </section>
-            <figure class="project-image">
+            <a
+              href="https://mareself-javascript-vanila.netlify.app/"
+              target="_blank"
+              class="project-image"
+            >
               <img
                 src="assets/project-image-four.webp"
                 alt="project image JavaScript Vanila site"
                 class="image"
               />
-            </figure>
+            </a>
           </div>
         </div>
       </div>
