--- a/home.html
+++ b/home.html
@@ -126,6 +126,14 @@
               </div>
             </div>
             <div class="skill">
+              <span class="skill-name">AJAX</span>
+               <div class="skill-percent">
+                <span class="skill-per ajax">
+                  <span class="tooltip">45%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill">
               <span class="skill-name">jQuery</span>
                <div class="skill-percent">
                 <span class="skill-per jQuery">
