update porfolio.html, portfolio.css, home.html, home.css
Add new project on portfolio page, add new component on home page

--- a/home.html
+++ b/home.html
@@ -198,10 +198,14 @@
         </div>
       </footer>
       <!-- end of footer section -->
+
+      <!-- button go to top -->
+      <button id="btn-to-top" class="hide" title="Go to the top of the page"><img src="assets/arrow-up-md-svgrepo-com (1).svg" alt="arrow icon" ></button>
     </main>
 
     <!-- JS -->
     <script src="typeWriter.js"></script> 
+    <script src="goToTopBtn.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
