--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,7 @@
         data-aos-delay="50"
         data-aos-duration="1000"
         data-aos-once="true"
+        class="box_box"
       >
         <div class="project">
           <div class="wrapper-about-project">
@@ -80,6 +81,15 @@
                       to that: logo, page layout, colors, fonts, logic )
                     </li>
                     <li>It is a multilingual site with 4 pages.</li>
+                    <li class="workedUsing">
+                      <img src="assets/html-5.svg" alt="html icon" />
+                      <img src="assets/css-3.svg" alt="css icon" />
+                      <img
+                        src="assets/javascript.svg"
+                        alt="javascript icon"
+                        style="width: 40px"
+                      />
+                    </li>
                   </ul>
                   <ul id="what_0" class="tabcontent-data tabcontent-data_0">
                     <li>
@@ -134,6 +144,7 @@
         data-aos-delay="50"
         data-aos-duration="1000"
         data-aos-once="true"
+        class="kiri_shop"
       >
         <div class="project">
           <div class="wrapper-about-project">
@@ -165,10 +176,19 @@
                   <h4 class="project-name">
                     Project name: <span>KIRI shop</span>
                   </h4>
-                  <span class="date">Near the end | March 2023</span>
+                  <span class="date">End Project | April 2023</span>
                   <ul id="briefly_1" class="tabcontent-data tabcontent-data_1">
                     <li>A shop designed according to the client's design.</li>
                     <li>Multi-page site, with more demanding logic.</li>
+                    <li class="workedUsing">
+                      <img src="assets/html-5.svg" alt="html icon" />
+                      <img src="assets/css-3.svg" alt="css icon" />
+                      <img
+                        src="assets/javascript.svg"
+                        alt="javascript icon"
+                        style="width: 40px"
+                      />
+                    </li>
                   </ul>
                   <ul id="what_1" class="tabcontent-data tabcontent-data_1">
                     <li>
@@ -191,11 +211,7 @@
                   <ul id="links_1" class="tabcontent-data tabcontent-data_1">
                     <li>
                       See how the site looks live by following this
-                      <a
-                        href="https://kiridemosite.netlify.app/index.html"
-                        target="_blank"
-                        >link</a
-                      >.
+                      <a href="https://kiri.rs/" target="_blank">link</a>.
                     </li>
                     <li>
                       Check out my GitHub, and see what the code itself looks
@@ -210,11 +226,7 @@
                 </div>
               </div>
             </section>
-            <a
-              href="https://kiridemosite.netlify.app/"
-              target="_blank"
-              class="project-image"
-            >
+            <a href="https://kiri.rs/" target="_blank" class="project-image">
               <img
                 src="assets/project-image-two.webp"
                 alt="project image KIRI shop site"
@@ -231,6 +243,7 @@
         data-aos-delay="50"
         data-aos-duration="1000"
         data-aos-once="true"
+        class="bank_modern"
       >
         <div class="project">
           <div class="wrapper-about-project">
@@ -266,6 +279,15 @@
                   <ul id="briefly_2" class="tabcontent-data tabcontent-data_2">
                     <li>A project I did based on a figma design.</li>
                     <li>Landing page with four sections.</li>
+                    <li class="workedUsing">
+                      <img
+                        src="assets/javascript.svg"
+                        alt="javascript icon"
+                        style="width: 40px"
+                      />
+                      <img src="assets/react.svg" alt="react icon" />
+                      <img src="assets/tailwind.svg" alt="tailwind icon" />
+                    </li>
                   </ul>
                   <ul id="what_2" class="tabcontent-data tabcontent-data_2">
                     <li>
@@ -329,6 +351,7 @@
         data-aos-delay="50"
         data-aos-duration="1000"
         data-aos-once="true"
+        class="vanila_projects"
       >
         <div class="project">
           <div class="wrapper-about-project">
@@ -366,6 +389,15 @@
                   <ul id="briefly_3" class="tabcontent-data tabcontent-data_3">
                     <li>Projects worked in Vanila JS.</li>
                     <li>10 mini projects.</li>
+                    <li class="workedUsing">
+                      <img src="assets/html-5.svg" alt="html icon" />
+                      <img src="assets/css-3.svg" alt="css icon" />
+                      <img
+                        src="assets/javascript.svg"
+                        alt="javascript icon"
+                        style="width: 40px"
+                      />
+                    </li>
                   </ul>
                   <ul id="what_3" class="tabcontent-data tabcontent-data_3">
                     <li>
@@ -405,6 +437,122 @@
             >
               <img
                 src="assets/project-image-four.webp"
+                alt="project image JavaScript Vanila site"
+                class="image"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- individual project -->
+      <div
+        data-aos="zoom-in-up"
+        data-aos-delay="50"
+        data-aos-duration="1000"
+        data-aos-once="true"
+        class="social_network"
+      >
+        <div class="project">
+          <div class="wrapper-about-project">
+            <section class="about-project">
+              <h3 class="title">About project: Social Network</h3>
+              <div class="tabs-container">
+                <div class="tab">
+                  <button
+                    id="defaultOpen_4"
+                    class="tablink tablink_4"
+                    onclick="openTab_4(event, 'briefly_4', 0)"
+                  >
+                    Briefly
+                  </button>
+                  <button
+                    class="tablink tablink_4"
+                    onclick="openTab_4(event, 'what_4', 1)"
+                  >
+                    What I learned
+                  </button>
+                  <button
+                    class="tablink tablink_4"
+                    onclick="openTab_4(event, 'links_4', 2)"
+                  >
+                    Links
+                  </button>
+                </div>
+                <div class="tabcontent">
+                  <h4 class="project-name">
+                    Project name: <span>Social Network</span>
+                  </h4>
+                  <span class="date">End Project | May 2023</span>
+                  <ul id="briefly_4" class="tabcontent-data tabcontent-data_4">
+                    <li>Project worked in Vanila JS.</li>
+                    <li>
+                      The idea was to create something similar to the old ASKfm.
+                    </li>
+                    <li class="workedUsing">
+                      <img src="assets/html-5.svg" alt="html icon" />
+                      <img src="assets/css-3.svg" alt="css icon" />
+                      <img
+                        src="assets/javascript.svg"
+                        alt="javascript icon"
+                        style="width: 40px"
+                      />
+                    </li>
+                  </ul>
+                  <ul id="what_4" class="tabcontent-data tabcontent-data_4">
+                    <li>
+                      I primarily did this project to practice working with API
+                      endpoints.
+                    </li>
+                    <li>
+                      Working on this project helped me understand how it all
+                      works, how I can pull some data from the database, upload
+                      it, modify the existing one or delete it if necessary.
+                    </li>
+                    <li>
+                      I used the mockAPI site to do quickly setup endpoints,
+                      generate custom data, and preform operations on it using
+                      RESTful interface.
+                    </li>
+                    <li>
+                      In this project, I also used cookies, created validation,
+                      and implemented slightly more demanding logic. This
+                      project also covers OOP programming.
+                    </li>
+                    <li>
+                      What I want to mention is that I will be upgrading this
+                      project over time.
+                    </li>
+                  </ul>
+                  <ul id="links_4" class="tabcontent-data tabcontent-data_4">
+                    <li>
+                      See how the site looks live by following this
+                      <a
+                        href="https://mareself-socialnetwork.netlify.app/"
+                        target="_blank"
+                        >link</a
+                      >.
+                    </li>
+                    <li>
+                      Check out my GitHub, and see what the code itself looks
+                      like:
+                      <a
+                        href="https://github.com/Marex-cpu/MarexSocialNetworkDemo"
+                        target="_blank"
+                        >link</a
+                      >.
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </section>
+            <a
+              href="https://mareself-socialnetwork.netlify.app/"
+              target="_blank"
+              class="project-image"
+            >
+              <img
+                src="assets/project-image-five.webp"
                 alt="project image JavaScript Vanila site"
                 class="image"
               />
