--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
           <a href="home.html" class="header-name">Marko Petrović</a>
         </div>
         <div class="header-links">
-          <a href="home.html" class="header-link">Home</a>
+          <a href="/" class="header-link">Home</a>
           <a href="portfolio.html" class="header-link">Portfolio</a>
           <a href="assets/CV.pdf" class="resume-btn" download>Resume</a>
         </div>
