update path to home page

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
       <!-- header section -->
       <header class="header">
         <div>
-          <a href="home.html" class="header-name">Marko Petrović</a>
+          <a href="/" class="header-name">Marko Petrović</a>
         </div>
         <div class="header-links">
           <a href="/" class="header-link">Home</a>
