--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
   <body id="portfolio">
     <!-- header section -->
     <header class="header">
-      <a href="home.html" class="header-name">Marko Petrović</a>
-      <a href="home.html" class="header-link"> Home</a>
+      <a href="/" class="header-name">Marko Petrović</a>
+      <a href="/" class="header-link"> Home</a>
       <div class="links-container">
         <a
           href="https://www.linkedin.com/in/marko-petrovi%C4%87-937b8323a/"
